--- a/install
+++ b/install
@@ -13,7 +13,8 @@ CA_PATH=$CERT_DIR/Lamassu_OP_Root_CA.pem
 SERVER_KEY_PATH=$KEY_DIR/Lamassu_OP.key
 SERVER_CERT_PATH=$CERT_DIR/Lamassu_OP.pem
 MNEMONIC_DIR=$CONFIG_DIR/mnemonics 
-MNEMONIC_FILE=$MNEMONIC_DIR/mnemonic.txt 
+MNEMONIC_FILE=$MNEMONIC_DIR/mnemonic.txt
+CARDANO_MNEMONIC_FILE=$MNEMONIC_DIR/cardano.txt
 BACKUP_DIR=/var/backups/postgresql
 BLOCKCHAIN_DIR=/mnt/blockchains
 OFAC_DATA_DIR=/var/lamassu/ofac
@@ -76,6 +77,9 @@ if [ "$release" != "16.04" ] || [ "$processor" != "x86_64" ]; then
     echo "Please return to DigitalOcean and create a droplet running Ubuntu 16.04 x64 instead."
     exit 1
 fi
+
+# Create dir where blochains will be stored
+[ -d $BLOCKCHAIN_DIR ] || mkdir $BLOCKCHAIN_DIR
 
 # So we don't run out of memory
 decho "Enabling swap file for install only..."
@@ -172,6 +176,7 @@ cat <<EOF > $CONFIG_DIR/lamassu.json
 {
   "postgresql": "postgres://lamassu_pg:$POSTGRES_PW@localhost/lamassu",
   "mnemonicPath": "$MNEMONIC_FILE",
+  "cardanoMnemonicPath": "$CARDANO_MNEMONIC_FILE",
   "lamassuCaPath": "$LAMASSU_CA_PATH",
   "caPath": "$CA_PATH",
   "certPath": "$SERVER_CERT_PATH",
@@ -262,9 +267,6 @@ set -e
 
 # reset terminal to link new executables
 hash -r
-
-# create /mnt/blockchains to obviate block volume
-mkdir /mnt/blockchains/
 
 echo
 decho "Done! Now it's time to configure Lamassu stack."
